--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "description": "Translation Highlights!",
     "permissions": ["activeTab", "declarativeContent", "storage"],
     "background": {
-      "scripts": ["background.js"],
+      "scripts": ["background.js", "contentscript.js"],
       "persistent": false
     },
     "page_action": {
@@ -23,5 +23,12 @@
       "128": "images/get_started128.png"
     },
     "options_page": "options.html",
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "run_at": "document_idle",
+        "js": ["contentScript.js"]
+      }
+    ],
     "manifest_version": 2
   }
