--- a/manifest.json
+++ b/manifest.json
@@ -27,7 +27,8 @@
       {
         "matches": ["<all_urls>"],
         "run_at": "document_idle",
-        "js": ["contentScript.js", "translationRequest.js"]
+        "js": ["contentScript.js", "translationRequest.js"],
+        "css": ["popup.css"]
       }
     ],
     "manifest_version": 2
