--- a/manifest.json
+++ b/manifest.json
@@ -27,9 +27,10 @@
       {
         "matches": ["<all_urls>"],
         "run_at": "document_idle",
-        "js": ["contentScript.js", "translationRequest.js", "key.js"],
+        "js": ["key.js", "contentScript.js", "translationRequest.js"],
         "css": ["popup.css"]
       }
     ],
+    "content_security_policy":"script-src 'self' https://translate.yandex.net; object-src 'self'",
     "manifest_version": 2
   }
